--- a/.gitignore
+++ b/.gitignore
@@ -2,7 +2,7 @@
 out/
 !**/src/main/**/out/
 !**/src/test/**/out/
-Test.java
+/src/JDBC.src.main.java/Test.java
 ### Eclipse ###
 .apt_generated
 .classpath
